# USBKVM

./: .gitignore  main_workspace.code-workspace
code/: CMakeLists.txt  License.txt  build.zig  do.py  guest_main.zig  gui_main.zig  host_main.zig
code/common/: async_spi.pio  commands.zig  pio_spi.zig  shared_sdk.h  usb_hid.zig  usb_serial.zig
code/gui_code/: README.txt  __main__.py  cv_stream.py  gui_sdl2_renderer.py  kbrd.py  launch_gui.sh  linux_cam.py  mousectl.py  requirements.txt  serial_control.py
code/gui_code/other_guis/: gui_pygame.py  gui_pygameHW.py  gui_pygame_smooth_scale.py  gui_sdl2.py
code/guihost/: ReadMe.txt  sdl_capture.zig  serial.zig
code/ucode/: CMakeLists.txt  abs_mouse.c  deploy.py  fat12.py  main.c  msc_disk.c  rp2040_c0.cfg  usb_descriptors.c
code/zig_gui/: build.zig  main.zig  sdl_video.c
code/µguest/: CMakeLists.txt  guest_sdk.h  pins.zig  tusb_config.h  usb_descriptors.c  usb_descriptors.h
code/µhost/: CMakeLists.txt  README.txt  host.h  msc_disk.c  pins.zig  tusb_config.h  usb_descriptors.c
docs/: HWDiagram.excalidraw.md  HighLevelDiagram.excalidraw.md  README.md
ecad/usbkvm/: copy_lib.py  proj_lib.kicad_sym  sym-lib-table  usb_kvm.kicad_pcb  usb_kvm.kicad_pro  usb_kvm.kicad_sch
ecad/usbkvm/Library.pretty/: 101181920001LF.kicad_mod  ABM8272T3.kicad_mod  SOP254P610X206-4N.kicad_mod  USB1135159LB.kicad_mod  USB405603A.kicad_mod  USBA3SRA.kicad_mod
mcad/: enclosure-Fusion002.3mf  enclosure.FCStd
